crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__address_literal_ident.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{@foo}\"#)"
---
Error: Unexpected identifier "foo" at byte offset 2, expected one of a decimal number, or a hexadecimal number
