crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__all_text.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"foo bar\"#)"
---
"foo bar"
