crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__back_to_back_exprs.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{foo . bar}{baz.qux}\"#)"
---
{ foo.bar
}@0
{ baz.qux
}@11
