crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__bool_literals.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{true | false}\"#)"
---
{ true
| false
}@0
