crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__byte_literal_whitespace.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{b 'foo'}\"#)"
---
Error: Unexpected whitespace followed by string "foo" at byte offset 4, expected one of ':', '|', or '}'
