crates/myso-display/src/v2/snapshots/myso_display__v2__parser__tests__dec_address_overflow.snap
---
source: crates/myso-display/src/v2/parser.rs
expression: "strands(r#\"{@12345678901234567890123456789012345678901234567890123456789012345678901234567890}\"#)"
---
Error: Invalid 'address' at byte offset 2: the number is too large for the type
